Fix spacing between nav items

--- a/Instanssi/main2017/static/main2017/css/_header.scss
+++ b/Instanssi/main2017/static/main2017/css/_header.scss
@@ -88,11 +88,9 @@
         position: relative;
         background: $theme-color;
         ul {
-            -webkit-transition: all $transition-large ease-in-out;
-            transition: all $transition-large ease-in-out;
             margin: 0px;
             .menu-item {
-                display: inline-block;
+                float: left;
                 width: auto;
                 a {
                     font-family: $title-font-family;
